tests/requests/valid/pp_03.http
GET /no/proxy/header HTTP/1.1\r\n
Host: example.com\r\n
Content-Length: 0\r\n
\r\n
